--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
       </a>
       
       <ul class="navbar-nav  ">
+           <li> <a href="#home" class="nav-link"> home</a></li>
           <li> <a href="#globalData" class="nav-link"> worldWide</a></li>
-          <li>  <a href="#countriesz" class="nav-link">Countries</a></li>  
+          <li>  <a href="#countriesz" class="nav-link">Countries</a></li>
+          <li>  <a href="#contact" class="nav-link">Contact</a></li>   
       </ul>
       <a href="" class="navbar-brand">
         <img src="images/covid19_response_logo_with_un_emblem_horizontal_april_2020.png" alt="world wide health organization"  width="160" height="50" class="d-flex justify-content-end " >
@@ -29,13 +31,12 @@
 </div>
     <article>
       <div >
-        <img src="images/www.png" width="100%" height="500" alt="">
+        <img id="home" src="images/www.png" width="100%" height="500" alt="">
       </div>
     </article>
       <section id="section" >
-      <select  id="option" class="form-select bg-info m-2" >
-          <option selected>Open this select menu</option>
-          <option value="1">One</option>
+      <select  id="option" class="form-select bg-warning m-2" >
+          <option selected>Choose a country</option>
         </select>
   
           <h2 id="globalData" class="text-center">Global data</h2>
@@ -76,33 +77,39 @@
 
         <div class="container">
           <div class="row"  id="card">
-
           </div>
-
         </section>
 
       <footer class="pt-1 ">
 
         <div  class="container p-10">
-          <div class="row">
+          <div  class="row p-5 ">
 
             <div class="col ">
-              <img class="pics" src="images/spacing.jfif" alt="keep it 6feet apart">
-              <p> Remember that some people without symptoms may be able to spread virus. Stay at least 6 Feet <span>Stay Home</span>
-                If You schedule an appointement with your Doctor. God helps All  </p>
+              <h4>Covid-19 Precaution </h4>
+              <ul class="ul">
+                <li>Stay home if you feel unwell.</li>
+                <li>Wear a mask in public.</li>
+                <li>Clean your hands</li>
+              </ul>
+              <h4>Contact</h4>
+              <ul class="ul">
+                <li id="contact">Contact us : +212 587908765 </li>
+                <li> Mohammed V Hospital </li>
+              </ul>
                </div>
 
             <div class="col">
               <img class="pics" src="images/covid19_response_logo_with_un_emblem_horizontal_april_2020.png" alt="">
+              <p></p>
               <p>
-                © 1995-2022 The Nemours Foundation. Nemours Children’s <a href="">Health®</a> and <a href=""> KidsHealth®</a> are registered trademarks of The Nemours Foundation. All rights reserved.</p>
+                © 1995-2022 The Nemours Foundation. Nemours Children’s <a href="">Health®</a> and <a href=""> KidsHealth®</a> are registered trademarks of The Nemours Foundation. <br> All rights reserved.</p>
             </div>
 
             <div class="col">
               <img class="pics" src="images/thank.jpg" alt="thank u doctor">
-              <p>
-              Note: All information on <a href="">KidsHealth®</a> is for educational purposes only. For specific medical advice, diagnoses, and treatment, consult your doctor.
-              </p>
+              <p></p>
+              <img class="pics" src="images/spacing.jfif" alt="keep it 6feet apart">
             </div>
 
           </div>
