few lines were added

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
           <img src="images/LOG.png" alt="Covid19 logo" width="160" height="80" class="d-inline-block align-top">
       </a>
       
-      <ul class="navbar-nav  ">
-           <li> <a href="#home" class="nav-link"> home</a></li>
-          <li> <a href="#globalData" class="nav-link"> worldWide</a></li>
-          <li>  <a href="#countriesz" class="nav-link">Countries</a></li>
-          <li>  <a href="#contact" class="nav-link">Contact</a></li>   
+      <ul class="navbar-nav   ">
+           <li> <a href="#home" class="nav-link text-info"> home</a></li>
+          <li> <a href="#globalData" class="nav-link text-info"> worldWide</a></li>
+          <li>  <a href="#countriesz" class="nav-link text-info">Countries</a></li>
+          <li>  <a href="#contact" class="nav-link text-info">Contact</a></li>   
       </ul>
       <a href="" class="navbar-brand">
         <img src="images/covid19_response_logo_with_un_emblem_horizontal_april_2020.png" alt="world wide health organization"  width="160" height="50" class="d-flex justify-content-end " >
@@ -57,7 +57,7 @@
             <tr>
             </tr>
 
-        <table id="countriesz" class="table table-bordered border text-white ">
+        <table id="countriesz" class="table table-bordered border text-white  ">
           <thead>
             <tr class="text-white text-center">
               <th scope="col"class="bg-dark ">Country</th>
@@ -76,15 +76,13 @@
         </table>
 
         <div class="container">
-          <div class="row"  id="card">
+          <div class="row pb-4"  id="card">
           </div>
         </section>
 
       <footer class="pt-1 ">
-
         <div  class="container p-10">
-          <div  class="row p-5 ">
-
+          <div  class="row p-2 " >
             <div class="col ">
               <h4>Covid-19 Precaution </h4>
               <ul class="ul">
@@ -103,7 +101,8 @@
               <img class="pics" src="images/covid19_response_logo_with_un_emblem_horizontal_april_2020.png" alt="">
               <p></p>
               <p>
-                © 1995-2022 The Nemours Foundation. Nemours Children’s <a href="">Health®</a> and <a href=""> KidsHealth®</a> are registered trademarks of The Nemours Foundation. <br> All rights reserved.</p>
+                © 1995-2022 The Nemours Foundation. Nemours Children’s <a href="">Health®</a> and <a href=""> KidsHealth®</a> are registered trademarks of The Nemours Foundation. <br> All rights reserved.
+              </p>
             </div>
 
             <div class="col">
